--- a/src/package.json
+++ b/src/package.json
@@ -1,42 +1,44 @@
 {
-    "name": "toloframework",
-    "version": "0.10.0",
-    "description": "Javascript/HTML/CSS compiler for Firefox OS or nodewebkit apps using modules in the nodejs style.",
-    "bin" : { "tfw" : "./tfw.js" },
-    "directories": {
-        "doc": "doc"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/tolokoban/ToloFrameWork.git"
-    },
-    "keywords": [
-        "tolokoban",
-        "firefoxos",
-        "fxos",
-        "commonjs",
-        "mobile",
-        "webapp",
-        "designer",
-        "framework",
-        "require"
-    ],
-    "author": "Tolokoban",
-    "license": "GNU GPL 3",
-    "bugs": {
-        "url": "https://github.com/tolokoban/ToloFrameWork/issues"
-    },
-    "dependencies": {
-        "colors": "~0.6.2",
-        "connect": "~3.2.0",
-        "htmlparser2": "~3.7.3",
-        "less": "^1.7.5",
-        "node-less": "^1.0.0",
-        "readline-sync": "~0.4.8",
-        "uglify-js": "~2.4.15",
-        "uglifycss": "0.0.9"
-    }
+  "name": "toloframework",
+  "version": "0.10.1",
+  "description": "Javascript/HTML/CSS compiler for Firefox OS or nodewebkit apps using modules in the nodejs style.",
+  "bin": {
+    "tfw": "./tfw.js"
+  },
+  "directories": {
+    "doc": "doc"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tolokoban/ToloFrameWork.git"
+  },
+  "keywords": [
+    "tolokoban",
+    "firefoxos",
+    "fxos",
+    "commonjs",
+    "mobile",
+    "webapp",
+    "designer",
+    "framework",
+    "require"
+  ],
+  "author": "Tolokoban",
+  "license": "GNU GPL 3",
+  "bugs": {
+    "url": "https://github.com/tolokoban/ToloFrameWork/issues"
+  },
+  "dependencies": {
+    "colors": "~0.6.2",
+    "connect": "~3.2.0",
+    "htmlparser2": "~3.7.3",
+    "less": "^1.7.5",
+    "node-less": "^1.0.0",
+    "readline-sync": "~0.4.8",
+    "uglify-js": "~2.4.15",
+    "uglifycss": "0.0.9"
+  }
 }
