--- a/src/package.json
+++ b/src/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "colors": "~0.6.2",
     "connect": "~3.2.0",
+    "esprima": "^1.2.2",
     "htmlparser2": "~3.7.3",
     "less": "^1.7.5",
     "node-less": "^1.0.0",
