--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toloframework",
-  "version": "0.11.4",
+  "version": "0.11.5",
   "description": "Javascript/HTML/CSS compiler for Firefox OS or nodewebkit apps using modules in the nodejs style.",
   "bin": {
     "tfw": "./tfw.js"
@@ -37,6 +37,7 @@
     "esprima": "^1.2.2",
     "htmlparser2": "~3.7.3",
     "less": "^1.7.5",
+    "markdown": "^0.5.0",
     "node-less": "^1.0.0",
     "readline-sync": "~0.4.8",
     "uglify-js": "~2.4.15",
