--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toloframework",
-  "version": "0.11.5",
+  "version": "0.11.6",
   "description": "Javascript/HTML/CSS compiler for Firefox OS or nodewebkit apps using modules in the nodejs style.",
   "bin": {
     "tfw": "./tfw.js"
@@ -41,6 +41,7 @@
     "marked": "^0.3.2",
     "node-less": "^1.0.0",
     "readline-sync": "~0.4.8",
+    "string": "^3.0.0",
     "uglify-js": "~2.4.15",
     "uglifycss": "0.0.9"
   }
