--- a/src/package.json
+++ b/src/package.json
@@ -1,12 +1,12 @@
 {
   "name": "toloframework",
-  "version": "0.15.0",
+  "version": "0.15.1",
   "description": "Javascript/HTML/CSS compiler for Firefox OS or nodewebkit apps using modules in the nodejs style.",
   "bin": {
     "tfw": "./tfw.js"
   },
   "directories": {
-    "doc": "doc"
+    "test": "test"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -45,5 +45,8 @@
     "uglify-js": "~2.4.15",
     "uglifycss": "0.0.9",
     "dox": "~0.6.1"
-  }
+  },
+  "homepage": "https://github.com/tolokoban/ToloFrameWork",
+  "main": "tfw.js",
+  "devDependencies": {}
 }
