--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "homepage": "https://github.com/tolokoban/ToloFrameWork",
   "main": "index.js",
   "devDependencies": {
-    "babel-core": "^5.8.23"
+    "babel-core": "^5.8.23",
+    "babel-plugin-uglify": "^1.0.2"
   }
 }
