--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
   "homepage": "https://github.com/tolokoban/ToloFrameWork",
   "main": "index.js",
   "devDependencies": {
-    "babel-core": "^5.8.23",
-    "babel-plugin-uglify": "^1.0.2"
+    "babel-core": "^5.8.24",
+    "babel-plugin-uglify": "^1.0.2",
+    "uglify-js": "^2.4.24"
   }
 }
