--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "homepage": "https://github.com/tolokoban/ToloFrameWork",
   "main": "index.js",
   "devDependencies": {
+    "source-map": "^0.5.1",
     "uglify-js": "^2.4.24"
   }
 }
