--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jasmine": "^2.3.1",
     "less": "^2.5.3",
     "marked": "^0.3.2",
+    "matis": "^0.2.0",
     "readline-sync": "~0.4.8",
     "string": "^3.0.0",
     "uglify-js": "^2.5.0"
