--- a/package.json
+++ b/package.json
@@ -32,7 +32,14 @@
   "bugs": {
     "url": "https://github.com/tolokoban/ToloFrameWork/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "colors": "^1.1.2",
+    "less": "^2.5.3",
+    "marked": "^0.3.5",
+    "readline-sync": "^1.2.22",
+    "string": "^3.3.1",
+    "uglify-js": "^2.6.1"
+  },
   "homepage": "https://github.com/tolokoban/ToloFrameWork",
   "main": "index.js",
   "devDependencies": {
