--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "dependencies": {
     "colors": "^1.1.2",
+    "jaguar": "^1.1.10",
+    "jsdoc": "^3.4.0",
     "less": "^2.6.1",
     "marked": "^0.3.5",
     "readline-sync": "^1.2.22",
