--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "marked": "^0.3.5",
     "readline-sync": "^1.2.22",
     "string": "^3.3.1",
+    "tlk-lexer": "0.0.2",
     "uglify-js": "^2.6.2"
   },
   "homepage": "https://github.com/tolokoban/ToloFrameWork",
