Now github option put the correct version in the dependencies of the created package.json file.

--- a/tpl/package.json
+++ b/tpl/package.json
@@ -34,6 +34,6 @@
         "karma-chrome-launcher": "^0.2.2",
         "karma-firefox-launcher": "^0.1.7",
         "karma-jasmine": "^0.3.6",
-        "toloframework": "^0.34.0"
+        "toloframework": "^{{version}}"
     }
 }
