--- a/ker/mod/tfw.date.ini
+++ b/ker/mod/tfw.date.ini
@@ -37,7 +37,7 @@ month8-short: Sept.
 month9-short: Oct.
 month10-short: Nov.
 month11-short: Dec.
-yesterday: yesterday at
+yesterday: yesterday
 
 [fr]
 day0: Dimanche
@@ -76,6 +76,6 @@ month6-short: Juil.
 month7-short: Août
 month8-short: Sept.
 month9-short: Oct.
-month1-short0: Nov.
-month1-short1: Déc.
-yesterday: hier à
+month10-short: Nov.
+month11-short: Déc.
+yesterday: hier
