--- a/ker/mod/font.fredericka/.htaccess
+++ b/ker/mod/font.fredericka/.htaccess
@@ -1,3 +1,3 @@
 <filesMatch ".(woff2)$">
-Header set Cache-Control "max-age=77760000, public, immutable"
+Header set Cache-Control "max-age=365000000, immutable"
 </filesMatch>
