--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "debug": "node bin/tfw.js build dev watch",
     "release": "node bin/tfw.js build version clean",
     "test": "node node_modules/jasmine/bin/jasmine.js",
-    "test:dbg": "node --debug-brk node_modules/jasmine/bin/jasmine.js"
+    "test:dbg": "node --inspect-brk node_modules/jasmine/bin/jasmine.js"
   },
   "repository": {
     "type": "git",
