Prompt and wysiwyg. Not to mention, new icons.

--- a/ker/mod/wdg.wysiwyg.ini
+++ b/ker/mod/wdg.wysiwyg.ini
@@ -1,46 +1,46 @@
 [en]
-icon-undo: Undo
-icon-repeat: Redo
-icon-ban: Remove all formatting
-icon-bold: Bold
-icon-italic: Italic
-icon-underline: Underline
-icon-font: Font face, size and color
-icon-header: Change header's level
-icon-list-ul: Unordered list
-icon-list-ol: Ordered list
-icon-align-left: Align left
-icon-align-center: Align center
-icon-align-right: Align center
-icon-align-justify: Justify
-icon-link: Add a link
-icon-arrow-circle-o-left: Float left
-icon-dot-circle-o: Remove floating
-icon-arrow-circle-o-right: Float right
+tip-undo: Undo
+tip-redo: Redo
+tip-eraser: Remove all formatting
+tip-format-bold: Bold
+tip-format-italic: Italic
+tip-format-underline: Underline
+tip-font: Font face, size and color
+tip-header: Change header's level
+tip-list-ul: Unordered list
+tip-list-ol: Ordered list
+tip-format-align-left: Align left
+tip-format-align-center: Align center
+tip-format-align-right: Align right
+tip-format-align-justify: Justify
+tip-link: Add/Remove a link
+tip-arrow-circle-o-left: Float left
+tip-dot-circle-o: Remove floating
+tip-arrow-circle-o-right: Float right
 font-color: Text color
 font-name: Font name
 font-size: Size
 sentence: The quick brown fox jumps over the lazy dog.
 
 [fr]
-icon-undo: Défaire
-icon-repeat: Refaire
-icon-ban: Retirer tout formatage
-icon-bold: Gras
-icon-italic: Italique
-icon-underline: Souligné
-icon-font: Police de caractères, taille et couleur
-icon-header: Changer le niveau de titre
-icon-list-ul: Liste à puces
-icon-list-ol: Liste numérotée
-icon-align-left: Aligner à gauche
-icon-align-center: Centrer le texte
-icon-align-right: Aligner à droite
-icon-align-justify: Justifier le texte
-icon-link: Ajouter un lien
-icon-arrow-circle-o-left: Flottement à gauche
-icon-dot-circle-o: Pas de flottement
-icon-arrow-circle-o-right: Flottement à droite
+tip-undo: Défaire
+tip-redo: Refaire
+tip-eraser: Retirer tout formatage
+tip-format-bold: Gras
+tip-format-italic: Italique
+tip-format-underline: Souligné
+tip-font: Police de caractères, taille et couleur
+tip-header: Changer le niveau de titre
+tip-list-ul: Liste à puces
+tip-list-ol: Liste numérotée
+tip-format-align-left: Aligner à gauche
+tip-format-align-center: Centrer le texte
+tip-format-align-right: Aligner à droite
+tip-format-align-justify: Justifier le texte
+tip-link: Ajouter/Retirer un lien hypertexte
+tip-arrow-circle-o-left: Flottement à gauche
+tip-dot-circle-o: Pas de flottement
+tip-arrow-circle-o-right: Flottement à droite
 font-color: Couleur du texte
 font-name: Police de caractères
 font-size: Taille
