--- a/ker/mod/wdg.wysiwyg.ini
+++ b/ker/mod/wdg.wysiwyg.ini
@@ -17,6 +17,7 @@ tip-link: Add/Remove a link
 tip-arrow-circle-o-left: Float left
 tip-dot-circle-o: Remove floating
 tip-arrow-circle-o-right: Float right
+tip-font: Font and color
 font-color: Text color
 font-name: Font name
 font-size: Size
@@ -41,6 +42,7 @@ tip-link: Ajouter/Retirer un lien hypertexte
 tip-arrow-circle-o-left: Flottement à gauche
 tip-dot-circle-o: Pas de flottement
 tip-arrow-circle-o-right: Flottement à droite
+tip-font: Police et couleur
 font-color: Couleur du texte
 font-name: Police de caractères
 font-size: Taille
