--- a/ker/mod/tfw.login.ini
+++ b/ker/mod/tfw.login.ini
@@ -6,6 +6,7 @@ hint: Let the password empty if you forgot it or if you want to create a new acc
 login: E-mail address
 ok: Login
 password: Password
+title: Login
 
 [fr]
 cancel: Annuler
@@ -15,3 +16,4 @@ hint: Laissez le mot de passe vide si vous l'avez oublié ou si vous voulez cré
 login: Adresse mail
 ok: Connexion
 password: Mot de passe
+title: Connexion
