--- a/ker/mod/wdg.button.ini
+++ b/ker/mod/wdg.button.ini
@@ -3,6 +3,7 @@ cancel: Cancel
 close: Close
 delete: Delete
 edit: Edit
+gotit: Got it
 no: No
 ok: OK
 save: Save
@@ -13,6 +14,7 @@ cancel: Annuler
 close: Fermer
 delete: Supprimer
 edit: Editer
+gotit: J'ai compris
 no: Non
 ok: Valider
 save: Sauver
