--- a/ker/mod/wdg.modal.ini
+++ b/ker/mod/wdg.modal.ini
@@ -1,9 +1,11 @@
 [en]
 cancel: Cancel
 close: Got it
-ok: OK
+confirm: Confirm
+ok: Accept
 
 [fr]
 cancel: Annuler
 close: J'ai compris
+confirm: Confirmation
 ok: Accepter
