--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "debug": "node bin/tfw.js build debug clean",
     "release": "node bin/tfw.js build version clean",
     "test": "node node_modules/jasmine/bin/jasmine.js",
-    "test:dbg": "node --inspect-brk node_modules/jasmine/bin/jasmine.js"
+    "test:dbg": "devtool node_modules/jasmine/bin/jasmine.js"
   },
   "repository": {
     "type": "git",
