XJS View enhanced, but not finished.

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "compile": {
       "type": "firefoxos",
       "files": [
-        "test\\.html$"
+        "(xjs|test)\\.html$"
       ]
     },
     "output": "gh-pages"
