--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "bin": {
     "tfw": "bin/tfw.js"
   },
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
     "clean": "node bin/tfw.js clean",
-    "watch": "node bin/tfw.js build debug watch",
-    "debug": "node bin/tfw.js build debug clean",
+    "watch": "node bin/tfw.js build debug test watch",
+    "debug": "node bin/tfw.js build debug test",
     "release": "node bin/tfw.js build version clean",
-    "test": "node node_modules/jasmine/bin/jasmine.js",
-    "test:dbg": "devtool node_modules/jasmine/bin/jasmine.js"
+    "test": "node node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=spec-jasmine/jasmine.json",
+    "test:dbg": "devtool node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=spec-jasmine/jasmine.json",
+    "jasmine": "node node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=spec-jasmine/jasmine.json",
+    "jasmine:dbg": "devtool node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=spec-jasmine/jasmine.json",
+    "karma": "node node_modules/karma/bin/karma start karma.conf.js",
+    "karma:dbg": "devtool node_modules/karma/bin/karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -64,7 +65,12 @@
     "output": "gh-pages"
   },
   "devDependencies": {
-    "jasmine": "^2.8.0"
+    "jasmine": "^2.8.0",
+    "jasmine-core": "^2.9.1",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^1.1.1"
   },
   "reservedModules": []
 }
