--- a/ker/mod/tfw.view.color-input.ini
+++ b/ker/mod/tfw.view.color-input.ini
@@ -1,4 +1,9 @@
 [en]
+chromatic-region: Select the chromatic region
+hue-selection: Fix the hue
+luminance: Adjust the light
 
 [fr]
-
+chromatic-region: Choisissez la région chromatique
+hue-selection: Ajustez la nuance
+luminance: Réglez l'éclairage
