--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "url": "https://github.com/tolokoban/ToloFrameWork/issues"
   },
   "dependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "clean-css": "^4.1.11",
     "colors": "^1.3.0",
     "jaguar": "^1.1.10",
