Work in progress to satisfy eslint.

--- a/tst/package.json
+++ b/tst/package.json
@@ -19,7 +19,7 @@
     "tfw": {
         "modules": [],
         "compile": {
-            "type": "firefoxos",
+            "type": "web",
             "files": "\\.html$"
         }
     }
