--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/core": "^7.1.2",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "babel-preset-minify": "^0.5.0",
     "clean-css": "^4.1.11",
     "colors": "^1.3.0",
     "jaguar": "^1.1.10",
