--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -28,6 +28,7 @@
     no-magic-numbers: [1, { "ignore": [0, 1] }]
     no-negated-condition: 0
     no-plusplus: 0  # I want to be able to use i++.
+    no-sync: 0
     no-ternary: 0
     no-underscore-dangle: [1, { "allowAfterThis": true }]
     no-use-before-define: [2, { functions: false, classes: true }]
