--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -14,6 +14,7 @@
     func-names: 0
     func-style: 0
     id-length: 0
+    indent: 0
     keyword-spacing: 0
     linebreak-style: 0
     max-len: [1, { code: 120 }]
