--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-preset-minify": "^0.5.0",
     "clean-css": "^4.2.1",
     "colors": "^1.3.2",
+    "core-js": "^3.0.1",
     "jaguar": "^1.1.10",
     "jsdoc": "^3.5.5",
     "less": "^2.7.3",
